# Verax-AuthAPI

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyotp  qrcode  requirements.txt
alembic/: env.py
alembic/versions/: 22ba9c416d84_muda_jsonb_para_json_genérico_e_.py  72954e6f3073_versão_inicial_com_tabelas_users_e_.py  d2fea1e99051_adiciona_campos_otp_secret_e_is_mfa_.py
app/api/: dependencies.py
app/api/endpoints/: auth.py  mgmt.py  users.py
app/core/: config.py  exceptions.py  security.py
app/crud/: base.py  crud_refresh_token.py  crud_user.py
app/db/: base.py  initial_data.py  session.py
app/models/: refresh_token.py  user.py
app/schemas/: token.py  user.py
app/services/: email_service.py
rust/: Cargo.toml  LICENSE  README.md
rust/migrations/: 20251023131953_create_users_table.sql  20251023132024_create_refresh_tokens_table.sql  20251023143556_add_mfa_to_users.sql
rust/src/: auth.rs  errors.rs  handlers.rs  lib.rs  main.rs  mfa.rs  middleware.rs  models.rs
rust/srcs/: handlers.rs  lib.rs  middleware.rs
rust/tests/: integration_test.rs
tests/: test_lockout.py
