[package]
name = "auth_api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
lettre = { version = "0.11.19", features = ["tokio1", "builder", "tokio1-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "json"] }
subtle = "2.6.1"
tokio = { version = "1.48.0", features = ["full"] }
totp-rs = { version = "5.7.0", features = ["qr", "gen_secret"] }
qrcode = "0.13.0"
base64 = "0.22.1"
base32 = "0.5.0"
image = "0.25.1"

[dev-dependencies]
tower = "0.5.2"
hyper = { version = "1.7.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.17", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
